--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,13 +1,43 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#navbarDropdown {
+  cursor: pointer;
+}
+
+.dropdown-menu {
+  margin-left: -90px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+cursor: pointer !important;
+}
+
+.navbar {
+  background: rgb(28,176,233);
+  background: linear-gradient(180deg, rgba(28,176,233,1) 29%, rgba(2,136,224,1) 72%); 
+}
+
+#title {
+  color: #0d0d0d;
+}
+
+#menuLogin {
+  visibility: hidden;
+  position: absolute;
+  background-color: #1cb0e9;
+  padding: 15px;
+  z-index: 3;
+  width: 300px;
+  border-radius: 15px;
+  margin-top: -10px;
+  margin-left: 76.7vw;
 }
