--- a/front/src/index.css
+++ b/front/src/index.css
@@ -41,3 +41,15 @@ cursor: pointer !important;
   margin-top: -10px;
   margin-left: 76.7vw;
 }
+
+#menuRegister {
+  visibility: hidden;
+  position: absolute;
+  background-color: #1cb0e9;
+  padding: 15px;
+  z-index: 3;
+  width: 300px;
+  border-radius: 15px;
+  margin-top: -10px;
+  margin-left: 76.7vw;
+}
