--- a/front/src/App.css
+++ b/front/src/App.css
@@ -18,10 +18,10 @@
   height: 90vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
   font-size: calc(10px + 2vmin);
-  color: #0399e0;
+  color: black;
 }
 
 .App-link {
