Dataendpoints en el back y formulario de nueva actividad en el front

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -13,12 +13,12 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 a {
-cursor: pointer !important;
+  cursor: pointer !important;
 }
 
 .card {
@@ -27,15 +27,27 @@ cursor: pointer !important;
 }
 
 .navbar {
-  background: rgb(28,176,233);
-  background: linear-gradient(180deg, rgba(28,176,233,1) 29%, rgba(2,136,224,1) 72%); 
+  background: rgb(28, 176, 233);
+  background: linear-gradient(
+    180deg,
+    rgba(28, 176, 233, 1) 29%,
+    rgba(2, 136, 224, 1) 72%
+  );
 }
 
 #title {
   color: #0d0d0d;
 }
 
-#menuLogin, #menuRegister {
+#nuevaActividadPersonal {
+  width: max-content;
+  margin: 0 auto;
+  float: none;
+  margin-top: 60px;
+}
+
+#menuLogin,
+#menuRegister {
   visibility: hidden;
   position: absolute;
   background-color: #1cb0e9;
