--- a/front/src/index.css
+++ b/front/src/index.css
@@ -2,6 +2,12 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f2f2f2;
+}
+
+#TituloAbout {
+  font-size: 4em;
+  font-weight: bold;
 }
 
 #navbarDropdown {
@@ -9,7 +15,7 @@ body {
 }
 
 .dropdown-menu {
-  margin-left: -90px;
+  margin-left: -70px;
 }
 
 code {
@@ -19,6 +25,10 @@ code {
 
 a {
   cursor: pointer !important;
+}
+
+a:hover {
+  background: #f1d258;
 }
 
 .card {
@@ -35,12 +45,7 @@ a {
 
 .navbar {
   font-family: "Hind Vadodara", sans-serif;
-  background: rgb(28, 176, 233);
-  background: linear-gradient(
-    180deg,
-    rgba(28, 176, 233, 1) 29%,
-    rgba(2, 136, 224, 1) 72%
-  );
+  background: #f1890c;
 }
 
 h1 {
@@ -122,7 +127,7 @@ button {
 #menuRegister {
   visibility: hidden;
   position: absolute;
-  background-color: #1cb0e9;
+  background-color: #f1890c;
   padding: 15px;
   z-index: 3;
   width: 300px;
@@ -136,4 +141,25 @@ button {
   margin-bottom: 10px;
   text-align: justify;
   font-size: 1.5em;
+  line-height: 40px;
+}
+
+.card-header {
+  background-color: #ffd340;
+}
+
+.border-primary {
+  border-color: #f1890c !important;
+}
+
+.yaGuardada {
+  color: #000;
+  background-color: #ffc107;
+  border-color: #ffc107;
+}
+
+.yaGuardada:hover {
+  color: #000;
+  background-color: #f1890c;
+  border-color: #f1890c;
 }
