--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- No debería haber manejo de vistas ya que el front se hace usando React -->
 <html>
   <head>
     <title><%= title %></title>
