--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,4 @@
+<!-- No debería haber manejo de vistas ya que el front se hace usando React -->
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
