Ya funciona /legalwatch

--- a/views/legalwatch.ejs
+++ b/views/legalwatch.ejs
@@ -9,75 +9,116 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
   <style>
     body {
-      width: 300px;
-      height: 200px;
-      background-color: aqua;
+      width: 100%;
+      background-color: #fff;
+    }
+
+    #botonEnviar {
+      visibility: visible;
+      position: absolute;
+    }
+
+    #cargando {
+      visibility: hidden;
+    }
+
+    #records {
+      visibility: hidden;
     }
   </style>
 </head>
+
 <body>
+  <div class="form-group black-border">
+    <label for="exampleFormControlTextarea4">Ingrese su abstract o cuéntenos sobre su invento:</label>
+    <textarea class="form-control rounded-0" id="parrafo" rows="6"></textarea>
+
+    <br />
+
+    <div class="col text-center">
+      <button type="button" class="btn btn-dark" onclick="ejecutarAPI()" id="botonEnviar">Enviar</button>
+      <br>
+      <div class="spinner-border text-dark" role="status" id="cargando" style="margin-left: 20px;">
+        <span class="sr-only">Cargando...</span>
+      </div>
+    </div>
+
+  </div>
+  <br />
+  <br />
   <div class="container">
-    <div class="row">
-      <textarea class="form-control rounded-0" id="parrafo" rows="10"></textarea>
-    </div>
-    <br />
-    <div class="row">
-      <button class="btn btn-primary" onclick="ejecutarAPI()">Enviar</button>
-    </div>
-    <br />
-    <br />
-    <div class="container">
-      <table class="table table-bordered" id="records" style="visibility: hidden;">
-        <thead class="thead-dark" id="recordsTableHead" style="text-align: center;">
-          <tr scope="col">Palabra(s)</tr>
-          <tr scope="col">Importancia</tr>
-          <tr scope="col">No. de apariciones</tr>
-        </thead>
-        <tbody id="recordsTableBody"></tbody>
-      </table>
-    </div>
+    <table class="table table-bordered" id="records">
+      <thead class="thead-dark" id="recordsTableHead" style="text-align: center;">
+        <tr>
+          <th scope="col">Palabra(s)</th>
+          <th scope="col">Importancia</th>
+          <th scope="col">No. de apariciones</th>
+        </tr>
+      </thead>
+      <tbody id="recordsTableBody"></tbody>
+    </table>
+  </div>
+  </div>
 
-    <script>
-      const ejecutarAPI = () => {
-        const mitexto = document.getElementById("parrafo").value;
-        const tbody = document.getElementById("recordsTableBody");
+  <script>
+    const ejecutarAPI = () => {
+      // Oculta el botón enviar
+      document.getElementById("botonEnviar").style.visibility = "hidden";
+      document.getElementById("botonEnviar").style.position = "absolute";
 
-        const aEnviar = { texto: mitexto };
+      // Muestra el spinner
+      document.getElementById("cargando").style.visibility = "visible";
+      document.getElementById("cargando").style.position = "relative";
 
-        fetch("/postRespuesta", {
+      const mitexto = document.getElementById("parrafo").value;
+      const tbody = document.getElementById("recordsTableBody");
+
+      const aEnviar = { texto: mitexto };
+
+      fetch("/postRespuesta", {
           method: "POST",
           body: JSON.stringify(aEnviar),
           headers: {
             "Content-Type": "application/json",
           },
         })
-          .then((res) => res.json())
-          .catch((error) => console.error("Error:", error))
-          .then((respuesta) => {
-            if (respuesta) {
-              console.log("Llegaron las palabras clave ", respuesta);
+        .then((res) => res.json())
+        .catch((error) => console.error("Error:", error))
+        .then((respuesta) => {
+          if (respuesta) {
+            console.log("Llegaron las palabras clave ", respuesta);
 
-              respuesta.forEach((register) => {
-                let tr = document.createElement("tr");
+            respuesta.forEach((register) => {
+              let tr = document.createElement("tr");
 
-                // Iterates over record's values
-                const td1 = document.createElement("td");
-                td1.textContent = register["keyword"];
-                tr.appendChild(td);
+              // Iterates over record's values
+              const td1 = document.createElement("td");
+              td1.textContent = register["keyword"];
+              tr.appendChild(td1);
 
-                const td2 = document.createElement("td");
-                td.textContent = register["keyword"];
-                tr.appendChild(td);
+              const td2 = document.createElement("td");
+              const arreglo = register["relevance"].split("");
+              td2.textContent = arreglo[2] + arreglo[3] + "." + arreglo[4] + "%";
+              tr.appendChild(td2);
 
-                const td3 = document.createElement("td");
-                td.textContent = register["keyword"];
-                tr.appendChild(td);
+              const td3 = document.createElement("td");
+              td3.textContent = register["count"];
+              tr.appendChild(td3);
 
-                tbody.appendChild(tr);
-              });
-            }
-          });
-      };
-    </script>
+              tbody.appendChild(tr);
+            });
+
+            // Oculta el spinner
+            document.getElementById("cargando").style.visibility = "hidden";
+            document.getElementById("cargando").style.position = "absolute";
+
+            // Muestra la tabla
+            document.getElementById("records").style.visibility = "visible";
+            document.getElementById("records").style.position = "relative";
+          }
+        });
+    };
+  </script>
 </body>
+
 </html>
